--- a/CSS/maze-escape-level-editor.css
+++ b/CSS/maze-escape-level-editor.css
@@ -19,6 +19,27 @@
 	border-color: orangered;
 }
 
+#generate {
+	background-color: limegreen;
+	border: solid 2px;
+	border-color: forestgreen;
+	border-radius: 8px;
+	padding: 7px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+#generate:hover {
+	background-color: forestgreen;
+	border-color: green;
+	cursor: pointer;
+}
+
+#generate:active {
+	background-color: green;
+	border-color: darkgreen;
+}
+
 #tool {
 	background-color: white;
 	border: solid grey 2px;
