--- a/CSS/default.css
+++ b/CSS/default.css
@@ -9,21 +9,7 @@ h1 {
 	padding: 10px;
 }
 
-.program-container {
-	background-color: lightgray;
-	border-radius: 8px;
-	padding: 20px;
-}
-
-.program-container h2 {
-	
-}
-
-.program-container p {
-	
-}
-
-.program-container button {
+button {
 	background-color: skyblue;
 	border: solid 2px;
 	border-color: deepskyblue;
@@ -33,19 +19,21 @@ h1 {
 	padding-bottom: 10px;
 }
 
-.program-container button:hover {
+button:hover {
 	background-color: deepskyblue;
 	border-color: dodgerblue;
 	cursor: pointer;
 }
 
-.program-container button:active {
+button:active {
 	background-color: dodgerblue;
 	border-color: blue;
 }
 
-.program-screenshots {
-	
+.program-container {
+	background-color: lightgray;
+	border-radius: 8px;
+	padding: 20px;
 }
 
 .footer {
