--- a/CSS/default.css
+++ b/CSS/default.css
@@ -30,7 +30,7 @@ button:active {
 	border-color: blue;
 }
 
-.edit-button {
+.right-align {
 	border-radius: 5px;
 	padding: 5px;
 	padding-top: 10px;
