--- a/CSS/default.css
+++ b/CSS/default.css
@@ -6,6 +6,7 @@ nav {
 	background-color: black;
 	color: whitesmoke;
 	border-radius: 8px;
+	justify-content: center;
 	padding: 10px;
 	font-family: monospace;
 }
