--- a/CSS/default.css
+++ b/CSS/default.css
@@ -14,6 +14,10 @@ nav h1 {
 	display: inline;
 }
 
+nav button {
+	margin-left: 10px;
+}
+
 button {
 	background-color: skyblue;
 	border: solid 2px;
